# whisptray

./: .gitignore  Makefile  README.md  dictate.py  pyproject.toml  setup.py
.github/workflows/: build-test.yml  publish-to-pypi.yml
scripts/ci/: install_linux_deps.sh
src/: dictate.py
src/dictate/: __init__.py
src/whisptray/: __init__.py  __main__.py  alsa_error_handler.py  audio_capture.py  speech_to_keys.py
tests/: speech_detection_sounddevice_test.py  speech_to_keys_test.py  test_speech_detection_sounddevice.py
