[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dictate"]

[tool.setuptools.package-data]
dictate = ["*.so"]

[project]
name = "dictate"
version = "0.1.0"
description = "A simple dictation program using Whisper, pynput, and pystray."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "numpy",
    "openai-whisper",
    "Pillow",
    "PyAudio",
    "PyGObject==3.50.1"
    "pynput",
    "pystray",
    "SpeechRecognition",
    "torch",
]

[project.scripts]
dictate = "dictate:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/dictate_app" # Placeholder
"Bug Tracker" = "https://github.com/yourusername/dictate_app/issues" # Placeholder

[project.optional-dependencies]
dev = [
    "black",
    "build"
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "types-pynput",
]

[[tool.mypy.overrides]]
module = [
    "pystray",
    "speech_recognition",
    "whisper"
]
ignore_missing_imports = true
