[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["whisptray"]
zip-safe = false

[tool.setuptools.package-data]

[project]
name = "whisptray"
version = "0.1.0"
description = "A simple dictation program using Whisper, pynput, and pystray. After installing, run with 'whisptray'. A tray icon will appear in the system tray. Click it to toggle dictation. Double click to exit."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
authors = [
  {name = "Brent Lewis", email = "coder0xff@gmail.com"},
]
dependencies = [
    "numpy",
    "openai-whisper",
    "Pillow",
    "PyAudio",
    "PyGObject==3.50.1",
    "pynput",
    "pystray",
    "SpeechRecognition",
    "torch",
]

[project.scripts]
whisptray = "whisptray:main"

[project.urls]
"Homepage" = "https://github.com/coder0xff/whisptray"
"Bug Tracker" = "https://github.com/coder0xff/whisptray/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "types-pynput",
]

[[tool.mypy.overrides]]
module = [
    "pystray",
    "speech_recognition",
    "whisper"
]
ignore_missing_imports = true
